--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#123056">
     <link rel="shortcut icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">      
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href="https://fonts.googleapis.com/css?family=Mina" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="jquery-ui.min.css">
@@ -359,6 +359,31 @@
                         </div>
                     </div>
                     <div class="mdl-layout-spacer"></div>
+                    <div class="mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
+                        <div class="mdl-card mdl-shadow--2dp" style="background:url('images/projects/2018/htdf/') center / cover;background-color:#123056;color:white;width:100%;cursor:pointer" onclick="location.assign('/Projects/2018/hdtf.html')" id="p01" onmouseover="min('p01');" onmouseout="mout('p01');">
+                            <div class="mdl-card__title mdl-card--expand"></div>
+                            <div class="mdl-card__actions" style="height:52px;padding:16px;background:rgba(0, 0, 0, 0.4);">
+                                <span>HDTF(화동제 앱)</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
+                        <div class="mdl-card mdl-shadow--2dp" style="background:url('images/projects/2018/tars/') center / cover;background-color:#123056;color:white;width:100%;cursor:pointer" onclick="location.assign('/Projects/2018/tars.html')" id="p02" onmouseover="min('p02');" onmouseout="mout('p02');">
+                            <div class="mdl-card__title mdl-card--expand"></div>
+                            <div class="mdl-card__actions" style="height:52px;padding:16px;background:rgba(0, 0, 0, 0.4);">
+                                <span>TARS Mini</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
+                        <div class="mdl-card mdl-shadow--2dp" style="background:url('images/projects/2018/buildit/') center / cover;background-color:#123056;color:white;width:100%;cursor:pointer" onclick="location.assign('/Projects/2018/buildit.html')" id="p03" onmouseover="min('p03');" onmouseout="mout('p03');">
+                            <div class="mdl-card__title mdl-card--expand"></div>
+                            <div class="mdl-card__actions" style="height:52px;padding:16px;background:rgba(0, 0, 0, 0.4);">
+                                <span>3D BuildIt</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="mdl-layout-spacer"></div>
                 </div>
                 <br />
                 <h2 style="text-align:center;">임원</h2>
@@ -368,7 +393,7 @@
                         <div class="mdl-card mdl-shadow--2dp" style="background:url('images/members/bsp.png') center / cover;background-color:#123056;color:white;width:100%;cursor:pointer" onclick="location.assign('http://www.github.com')" id="m1" onmouseover="min('m1');" onmouseout="mout('m1');">
                             <div class="mdl-card__title mdl-card--expand"></div>
                             <div class="mdl-card__actions" style="height:52px;padding:16px;background:rgba(0, 0, 0, 0.4);">
-                                <span>부장 <b>배성필</b></span>
+                                <span>부장 <b>조현서</b></span>
                             </div>
                         </div>
                     </div>
@@ -376,7 +401,7 @@
                         <div class="mdl-card mdl-shadow--2dp" style="background:url('images/members/default.png') center / cover;background-color:#123056;color:white;width:100%;cursor:pointer" onclick="location.assign('http://www.github.com')" id="m2" onmouseover="min('m2');" onmouseout="mout('m2');">
                             <div class="mdl-card__title mdl-card--expand"></div>
                             <div class="mdl-card__actions" style="height:52px;padding:16px;background:rgba(0, 0, 0, 0.4);">
-                                <span>차장 <b>허이섭</b></span>
+                                <span>차장 <b>박천수</b></span>
                             </div>
                         </div>
                     </div>
@@ -384,7 +409,7 @@
                         <div class="mdl-card mdl-shadow--2dp" style="background:url('images/members/default.png') center / cover;background-color:#123056;color:white;width:100%;cursor:pointer" onclick="location.assign('http://www.github.com')" id="m3" onmouseover="min('m3');" onmouseout="mout('m3');">
                             <div class="mdl-card__title mdl-card--expand"></div>
                             <div class="mdl-card__actions" style="height:52px;padding:16px;background:rgba(0, 0, 0, 0.4);">
-                                <span>차장 <b>윤재원</b></span>
+                                <span>차장 <b>박형빈</b></span>
                             </div>
                         </div>
                     </div>
@@ -392,7 +417,7 @@
                         <div class="mdl-card mdl-shadow--2dp" style="background:url('images/members/default.png') center / cover;background-color:#123056;color:white;width:100%;cursor:pointer" onclick="location.assign('http://www.github.com')" id="m4" onmouseover="min('m4');" onmouseout="mout('m4');">
                             <div class="mdl-card__title mdl-card--expand"></div>
                             <div class="mdl-card__actions" style="height:52px;padding:16px;background:rgba(0, 0, 0, 0.4);">
-                                <span>회계 <b>천혁우</b></span>
+                                <span>회계 <b>현위수</b></span>
                             </div>
                         </div>
                     </div>
@@ -412,8 +437,8 @@
                         <div>
                             <h3>Contact</h3>
                             <p style="font-size:1.4rem;">놀라운 아이디어를 가지고 있나요?</p>
-                            <h4><a href="mailto:kgLISTLIST@gmail.com"><i class="material-icons">mail</i></a> kglistlist@gmail.com</h4>
-                            <h4><a href="https://www.github.com/kglist"><i class="fa fa-git" style="font-size:1.5rem;"></i></a> GitHub</h4>                        
+                            <h4><a href="mailto:kgLISTLIST@gmail.com"><i class="material-icons">mail</i></a> kyunggilist24@gmail.com</h4>
+                            <h4><a href="https://www.github.com/kglist"><i class="fa fa-git" style="font-size:1.5rem;"></i></a> GitHub</h4>
                             <h4><a href="https://fb.me/KLISTLIST"><i class="material-icons">sms</i></a> Messenger</h4>
                         </div>
                     </div>
@@ -430,7 +455,7 @@
             <footer class="mdl-mega-footer" style="background-color:#123056;">
                 <div class="mdl-mega-footer__middle-section">
                     <div class="mdl-mega-footer__bottom-section">
-                        <h6 style="color:white;">Made by <big><b>SeongPil Bae</b></big> / Illust by <big><b>Yisub Heo</b></big> / Support by <big><b>DoHyeong Kim</b></big>(EOS)</h6>
+                        <h6 style="color:white;">Made by <big><b>SeongPil Bae (2018)</b></big> / Illust by <big><b>Yisub Heo (2018)</b></big> / Support by <big><b>DoHyeong Kim (2018)</b></big>(KSA-EOS)</h6>
                     </div>
                 </div>
             </footer>
@@ -495,7 +520,7 @@
         }
 
         /*var countDownDate = new Date("Mar 12, 2018 23:59:59").getTime();
-        
+
         var x = setInterval(function() {
           var now = new Date().getTime();
           var distance = countDownDate - now;
