--- a/public/indexnew.html
+++ b/public/indexnew.html
@@ -76,7 +76,7 @@
     </div>
     <div class="animate-apear" id="main" style="display:none;">
         <header id="nav" class="mdl-layout__header" style="position:fixed;width:100%;z-index:2;background-color:#123056;color:white">
-            <div class="mdl-layout-icon" style="text-align:right;" onclick="document.getElementById('lname').click();"><img src="images/logo.png" height="5%" /></div>
+            <div class="mdl-layout-icon" style="text-align:right;" onclick="document.getElementById('lname').click();"><img src="images/logo.png" height="100%" /></div>
             <div class="mdl-layout__header-row">
                 <a class="mdl-navigation__link" href="#b0" id="lname"><span onclick="document.getElementById('lname').click();" class="mdl-layout-title"><span class="mdl-cell--hide-phone mdl-cell--hide-tablet">경기고등학교 </span>과학기술정보통신부</span></a>
                 <div class="mdl-layout-spacer"></div>
@@ -161,7 +161,7 @@
                         <p class="gray">보고, 즐기고, 체험하고</p>
                     </div>
                     <div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--2-col-phone" style="text-align:center">
-                        <i class="material-icons pink" style="font-size:5rem">memory</i>
+                        <i class="material-icons pink" style="font-size:5rem">maker</i>
                         <h4>메이커 활동</h4>
                         <p class="gray">만들어가며 배운다</p>
                     </div>
@@ -330,20 +330,6 @@
                         <div class="mdl-card mdl-shadow--2dp" style="background:url('images/EOS.jpg') center / cover;background-color:#123056;color:white;width:100%;cursor:pointer" onclick="location.assign('http://eosofksa.cf/')" id="eos" onmouseover="min('eos');" onmouseout="mout('eos');">
                             <div class="mdl-card__title mdl-card--expand"></div>
                             <div class="mdl-card__actions" style="height:52px;padding:16px;background:rgba(0, 0, 0, 0.4);">
-                                <span>크레아트봇 (Creartbot)</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="mdl-layout-spacer"></div>
-                </div>
-                <!-- div 끝 -->
-                <!-- div 시작 -->
-                <div class="mdl-grid">
-                    <div class="mdl-layout-spacer"></div>
-                    <div class="mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
-                        <div class="mdl-card mdl-shadow--2dp" style="background:url('images/EOS.jpg') center / cover;background-color:#123056;color:white;width:100%;cursor:pointer" onclick="location.assign('http://eosofksa.cf/')" id="eos" onmouseover="min('eos');" onmouseout="mout('eos');">
-                            <div class="mdl-card__title mdl-card--expand"></div>
-                            <div class="mdl-card__actions" style="height:52px;padding:16px;background:rgba(0, 0, 0, 0.4);">
                                 <span>한빛미디어</span>
                             </div>
                         </div>
@@ -351,34 +337,20 @@
                     <div class="mdl-layout-spacer"></div>
                 </div>
                 <!-- div 끝 -->
-                <!-- div 시작 -->
+                <br />
+                <h2 style="text-align:center;">공동 프로젝트</h2>
                 <div class="mdl-grid">
                     <div class="mdl-layout-spacer"></div>
                     <div class="mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
-                        <div class="mdl-card mdl-shadow--2dp" style="background:url('images/EOS.jpg') center / cover;background-color:#123056;color:white;width:100%;cursor:pointer" onclick="location.assign('http://eosofksa.cf/')" id="eos" onmouseover="min('eos');" onmouseout="mout('eos');">
+                        <div class="mdl-card mdl-shadow--2dp" style="background:url('images/projects/2018/printvr/vr.jpg') center / cover;background-color:#123056;color:white;width:100%;cursor:pointer" onclick="location.assign('/Projects/2018/3dvr.html')" id="cp1" onmouseover="min('cp1');" onmouseout="mout('cp1');">
                             <div class="mdl-card__title mdl-card--expand"></div>
                             <div class="mdl-card__actions" style="height:52px;padding:16px;background:rgba(0, 0, 0, 0.4);">
-                                <span>제이펍 (Jpub)</span>
+                                <span>Print-VR</span>
                             </div>
                         </div>
                     </div>
                     <div class="mdl-layout-spacer"></div>
                 </div>
-                <!-- div 끝 -->
-                <!-- div 시작 -->
-                <div class="mdl-grid">
-                    <div class="mdl-layout-spacer"></div>
-                    <div class="mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
-                        <div class="mdl-card mdl-shadow--2dp" style="background:url('images/EOS.jpg') center / cover;background-color:#123056;color:white;width:100%;cursor:pointer" onclick="location.assign('http://eosofksa.cf/')" id="eos" onmouseover="min('eos');" onmouseout="mout('eos');">
-                            <div class="mdl-card__title mdl-card--expand"></div>
-                            <div class="mdl-card__actions" style="height:52px;padding:16px;background:rgba(0, 0, 0, 0.4);">
-                                <span>인사이트출판</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="mdl-layout-spacer"></div>
-                </div>
-                <!-- div 끝 -->
                 <br />
             </div>
             <div style="padding:3em;background-color:#fafafa;color:black">
@@ -389,63 +361,15 @@
                         <div class="mdl-card mdl-shadow--2dp" style="background:url('images/projects/2018/htdf/') center / cover;background-color:#123056;color:white;width:100%;cursor:pointer" onclick="location.assign('/Projects/2018/hdtf.html')" id="p01" onmouseover="min('p01');" onmouseout="mout('p01');">
                             <div class="mdl-card__title mdl-card--expand"></div>
                             <div class="mdl-card__actions" style="height:52px;padding:16px;background:rgba(0, 0, 0, 0.4);">
-                                <span>Kyunggi-Move (전기차)</span>
+                                <span>HDTF(화동제 앱)</span>
                             </div>
                         </div>
                     </div>
                     <div class="mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
-                        <div class="mdl-card mdl-shadow--2dp" style="background:url('images/projects/2018/kglife/') center / cover;background-color:#123056;color:white;width:100%;cursor:pointer" onclick="location.assign('/Projects/2018/tars.html')" id="p02" onmouseover="min('p02');" onmouseout="mout('p02');">
+                        <div class="mdl-card mdl-shadow--2dp" style="background:url('images/projects/2018/tars/') center / cover;background-color:#123056;color:white;width:100%;cursor:pointer" onclick="location.assign('/Projects/2018/tars.html')" id="p02" onmouseover="min('p02');" onmouseout="mout('p02');">
                             <div class="mdl-card__title mdl-card--expand"></div>
                             <div class="mdl-card__actions" style="height:52px;padding:16px;background:rgba(0, 0, 0, 0.4);">
-                                <span>KyunggiLife</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
-                        <div class="mdl-card mdl-shadow--2dp" style="background:url('images/projects/2018/htdf/') center / cover;background-color:#123056;color:white;width:100%;cursor:pointer" onclick="location.assign('/Projects/2018/hdtf.html')" id="p01" onmouseover="min('p01');" onmouseout="mout('p01');">
-                            <div class="mdl-card__title mdl-card--expand"></div>
-                            <div class="mdl-card__actions" style="height:52px;padding:16px;background:rgba(0, 0, 0, 0.4);">
-                                <span>KMAP (경기고 웹 지도)</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
-                        <div class="mdl-card mdl-shadow--2dp" style="background:url('images/projects/2018/c2c/') center / cover;background-color:#123056;color:white;width:100%;cursor:pointer" onclick="location.assign('/Projects/2018/hdtf.html')" id="p01" onmouseover="min('p01');" onmouseout="mout('p01');">
-                            <div class="mdl-card__title mdl-card--expand"></div>
-                            <div class="mdl-card__actions" style="height:52px;padding:16px;background:rgba(0, 0, 0, 0.4);">
-                                <span>C2C (Classroom to Classroom)</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
-                        <div class="mdl-card mdl-shadow--2dp" style="background:url('images/projects/2018/htdf/') center / cover;background-color:#123056;color:white;width:100%;cursor:pointer" onclick="location.assign('/Projects/2018/hdtf.html')" id="p01" onmouseover="min('p01');" onmouseout="mout('p01');">
-                            <div class="mdl-card__title mdl-card--expand"></div>
-                            <div class="mdl-card__actions" style="height:52px;padding:16px;background:rgba(0, 0, 0, 0.4);">
-                                <span>Play with Tech</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
-                        <div class="mdl-card mdl-shadow--2dp" style="background:url('images/projects/2018/htdf/') center / cover;background-color:#123056;color:white;width:100%;cursor:pointer" onclick="location.assign('/Projects/2018/hdtf.html')" id="p01" onmouseover="min('p01');" onmouseout="mout('p01');">
-                            <div class="mdl-card__title mdl-card--expand">CoilShots</div>
-                            <div class="mdl-card__actions" style="height:52px;padding:16px;background:rgba(0, 0, 0, 0.4);">
-                                <span></span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
-                        <div class="mdl-card mdl-shadow--2dp" style="background:url('images/projects/2018/htdf/') center / cover;background-color:#123056;color:white;width:100%;cursor:pointer" onclick="location.assign('/Projects/2018/hdtf.html')" id="p01" onmouseover="min('p01');" onmouseout="mout('p01');">
-                            <div class="mdl-card__title mdl-card--expand"></div>
-                            <div class="mdl-card__actions" style="height:52px;padding:16px;background:rgba(0, 0, 0, 0.4);">
-                                <span>VRWorld</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
-                        <div class="mdl-card mdl-shadow--2dp" style="background:url('images/projects/2018/htdf/') center / cover;background-color:#123056;color:white;width:100%;cursor:pointer" onclick="location.assign('/Projects/2018/hdtf.html')" id="p01" onmouseover="min('p01');" onmouseout="mout('p01');">
-                            <div class="mdl-card__title mdl-card--expand"></div>
-                            <div class="mdl-card__actions" style="height:52px;padding:16px;background:rgba(0, 0, 0, 0.4);">
-                                <span>HDF Mall</span>
+                                <span>TARS Mini</span>
                             </div>
                         </div>
                     </div>
@@ -453,21 +377,12 @@
                         <div class="mdl-card mdl-shadow--2dp" style="background:url('images/projects/2018/buildit/') center / cover;background-color:#123056;color:white;width:100%;cursor:pointer" onclick="location.assign('/Projects/2018/buildit.html')" id="p03" onmouseover="min('p03');" onmouseout="mout('p03');">
                             <div class="mdl-card__title mdl-card--expand"></div>
                             <div class="mdl-card__actions" style="height:52px;padding:16px;background:rgba(0, 0, 0, 0.4);">
-                                <span>3D Print&Make</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
-                        <div class="mdl-card mdl-shadow--2dp" style="background:url('images/projects/2018/buildit/') center / cover;background-color:#123056;color:white;width:100%;cursor:pointer" onclick="location.assign('/Projects/2018/buildit.html')" id="p03" onmouseover="min('p03');" onmouseout="mout('p03');">
-                            <div class="mdl-card__title mdl-card--expand"></div>
-                            <div class="mdl-card__actions" style="height:52px;padding:16px;background:rgba(0, 0, 0, 0.4);">
-                                <span>이공계동아리연합</span>
+                                <span>3D BuildIt</span>
                             </div>
                         </div>
                     </div>
                     <div class="mdl-layout-spacer"></div>
                 </div>
-                <!--구역구분-->
                 <br />
                 <h2 style="text-align:center;">완료된 프로젝트</h2>
                 <div class="mdl-grid">
@@ -481,6 +396,14 @@
                         </div>
                     </div>
                     <div class="mdl-layout-spacer"></div>
+                    <div class="mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
+                        <div class="mdl-card mdl-shadow--2dp" style="background:url('images/projects/2018/htdf/') center / cover;background-color:#123056;color:white;width:100%;cursor:pointer" onclick="location.assign('/Projects/2018/hdtf.html')" id="p01" onmouseover="min('p01');" onmouseout="mout('p01');">
+                            <div class="mdl-card__title mdl-card--expand"></div>
+                            <div class="mdl-card__actions" style="height:52px;padding:16px;background:rgba(0, 0, 0, 0.4);">
+                                <span>HDTF(화동제 앱)</span>
+                            </div>
+                        </div>
+                    </div>
                     <div class="mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--4-col-phone">
                         <div class="mdl-card mdl-shadow--2dp" style="background:url('images/projects/2018/tars/') center / cover;background-color:#123056;color:white;width:100%;cursor:pointer" onclick="location.assign('/Projects/2018/tars.html')" id="p02" onmouseover="min('p02');" onmouseout="mout('p02');">
                             <div class="mdl-card__title mdl-card--expand"></div>
@@ -504,7 +427,7 @@
                 <div class="mdl-grid">
                     <div class="mdl-layout-spacer"></div>
                     <div class="mdl-cell mdl-cell--2-col mdl-cell--4-col-tablet mdl-cell--2-col-phone">
-                        <div class="mdl-card mdl-shadow--2dp" style="background:url('images/members/default.png') center / cover;background-color:#123056;color:white;width:100%;cursor:pointer" onclick="location.assign('http://www.github.com/RADIX24')" id="m1" onmouseover="min('m1');" onmouseout="mout('m1');">
+                        <div class="mdl-card mdl-shadow--2dp" style="background:url('images/members/bsp.png') center / cover;background-color:#123056;color:white;width:100%;cursor:pointer" onclick="location.assign('http://www.github.com')" id="m1" onmouseover="min('m1');" onmouseout="mout('m1');">
                             <div class="mdl-card__title mdl-card--expand"></div>
                             <div class="mdl-card__actions" style="height:52px;padding:16px;background:rgba(0, 0, 0, 0.4);">
                                 <span>부장 <b>조현서</b></span>
@@ -551,7 +474,7 @@
                         <div>
                             <h3>Contact</h3>
                             <p style="font-size:1.4rem;">놀라운 아이디어를 가지고 있나요?</p>
-                            <h4><a href="mailto:kyunggilist24@gmail.com"><i class="material-icons">mail</i></a> kyunggilist24@gmail.com</h4>
+                            <h4><a href="mailto:kgLISTLIST@gmail.com"><i class="material-icons">mail</i></a> kyunggilist24@gmail.com</h4>
                             <h4><a href="https://www.github.com/kglist"><i class="fa fa-git" style="font-size:1.5rem;"></i></a> GitHub</h4>
                             <h4><a href="https://fb.me/KLISTLIST"><i class="material-icons">sms</i></a> Messenger</h4>
                         </div>
@@ -569,7 +492,7 @@
             <footer class="mdl-mega-footer" style="background-color:#123056;">
                 <div class="mdl-mega-footer__middle-section">
                     <div class="mdl-mega-footer__bottom-section">
-                        <h6 style="color:white;">Made by <big><b>SeongPil Bae (2018)</b></big> / Illust by <big><b>Yisub Heo (2018)</b></big> / Support by <big><b>DoHyeong Kim (2018)</b></big>(KSA-EOS) / Homepage Powered by <big><b>Whalessoft</b></big></h6>
+                        <h6 style="color:white;">Made by <big><b>SeongPil Bae (2018)</b></big> / Illust by <big><b>Yisub Heo (2018)</b></big> / Support by <big><b>DoHyeong Kim (2018)</b></big>(KSA-EOS)</h6>
                     </div>
                 </div>
             </footer>
