--- a/public/indexnew.html
+++ b/public/indexnew.html
@@ -430,7 +430,7 @@
                         <div class="mdl-card mdl-shadow--2dp" style="background:url('images/members/bsp.png') center / cover;background-color:#123056;color:white;width:100%;cursor:pointer" onclick="location.assign('http://www.github.com')" id="m1" onmouseover="min('m1');" onmouseout="mout('m1');">
                             <div class="mdl-card__title mdl-card--expand"></div>
                             <div class="mdl-card__actions" style="height:52px;padding:16px;background:rgba(0, 0, 0, 0.4);">
-                                <span>부장 <b>조현서</b></span>
+                                <span>부장 <b>한주현</b></span>
                             </div>
                         </div>
                     </div>
@@ -438,7 +438,7 @@
                         <div class="mdl-card mdl-shadow--2dp" style="background:url('images/members/default.png') center / cover;background-color:#123056;color:white;width:100%;cursor:pointer" onclick="location.assign('http://www.github.com')" id="m2" onmouseover="min('m2');" onmouseout="mout('m2');">
                             <div class="mdl-card__title mdl-card--expand"></div>
                             <div class="mdl-card__actions" style="height:52px;padding:16px;background:rgba(0, 0, 0, 0.4);">
-                                <span>차장 <b>박천수</b></span>
+                                <span>차장 <b>박민준</b></span>
                             </div>
                         </div>
                     </div>
@@ -446,7 +446,7 @@
                         <div class="mdl-card mdl-shadow--2dp" style="background:url('images/members/default.png') center / cover;background-color:#123056;color:white;width:100%;cursor:pointer" onclick="location.assign('http://www.github.com')" id="m3" onmouseover="min('m3');" onmouseout="mout('m3');">
                             <div class="mdl-card__title mdl-card--expand"></div>
                             <div class="mdl-card__actions" style="height:52px;padding:16px;background:rgba(0, 0, 0, 0.4);">
-                                <span>차장 <b>박형빈</b></span>
+                                <span>차장 <b>이윤건</b></span>
                             </div>
                         </div>
                     </div>
@@ -454,7 +454,7 @@
                         <div class="mdl-card mdl-shadow--2dp" style="background:url('images/members/default.png') center / cover;background-color:#123056;color:white;width:100%;cursor:pointer" onclick="location.assign('http://www.github.com')" id="m4" onmouseover="min('m4');" onmouseout="mout('m4');">
                             <div class="mdl-card__title mdl-card--expand"></div>
                             <div class="mdl-card__actions" style="height:52px;padding:16px;background:rgba(0, 0, 0, 0.4);">
-                                <span>회계 <b>현위수</b></span>
+                                <span> <b>이창주</b></span>
                             </div>
                         </div>
                     </div>
